--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@bitcoinerlab/secp256k1",
   "homepage": "https://bitcoinerlab.com/secp256k1",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A library for performing elliptic curve operations on the secp256k1 curve. It is designed to integrate into the BitcoinJS & BitcoinerLAB ecosystems and uses the audited noble-secp256k1 library. It is compatible with environments that do not support WASM, such as React Native.",
   "main": "dist/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "prepublishOnly": "npm run build && npm test",
