--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bitcoinerlab/secp256k1",
   "homepage": "https://bitcoinerlab.com/secp256k1",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A library for performing elliptic curve operations on the secp256k1 curve. It is designed to integrate into the BitcoinJS & BitcoinerLAB ecosystems and uses the audited noble-secp256k1 library. It is compatible with environments that do not support WASM, such as React Native.",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -41,7 +41,6 @@
     "tape": "^5.6.1"
   },
   "dependencies": {
-    "@noble/hashes": "^1.1.5",
-    "@noble/secp256k1": "^1.7.1"
+    "@noble/curves": "^1.7.0"
   }
 }
